--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,21 @@ header {
   border-radius: 8px;
   border: 3px solid gold;
 }
+
+#topStatusBar {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 12px;
+  background: white;
+  border-bottom: 2px solid #eee;
+  text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 30;
+}
+
+button.disabled {
+    background: #777;
+    opacity: 0.6;
+    cursor: not-allowed;
+}
